--- a/index.html
+++ b/index.html
@@ -139,14 +139,18 @@
         </div>
 
         <table class="table" style="margin-top:8px">
-          <thead>
-            <tr>
-              <th style="min-width:200px">姓名</th>
-              <th style="min-width:160px">部門</th>
-              <th style="min-width:120px">狀態</th>
-              <th style="min-width:200px">操作</th>
-            </tr>
-          </thead>
+        <thead>
+          <tr>
+            <th style="min-width:120px">碼</th>
+            <th style="min-width:200px">姓名</th>
+            <th style="min-width:160px">部門</th>
+            <th style="min-width:120px">桌</th>
+            <th style="min-width:120px">座</th>
+            <th style="min-width:120px">狀態</th>
+            <th style="min-width:200px">操作</th>
+          </tr>
+        </thead>
+
           <tbody id="rosterRows"></tbody>
         </table>
 
