--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   <section class="card stage">
     <img id="logoEl3" class="logo" alt="logo" />
     <div id="bgEl3" class="bg"></div>
+     <canvas id="confetti3"></canvas>
     <div class="stage-inner">
       <div id="banner3" class="banner"></div>
       <div class="row prize-header">
@@ -75,7 +76,6 @@
       <div class="bar" style="justify-content:center;margin-top:12px">
         <label>批量 <input type="number" id="tabletBatch" value="1" min="1" /></label>
         <button id="tabletCountdown" class="btn primary" type="button">⏱️ 倒數抽獎</button>
-        <button id="tabletDraw" class="btn" type="button">🎲 Draw Now</button>
       </div>
 
       <div class="bar" style="justify-content:center;margin-top:12px">
