--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
       <!-- NEW: a huge countdown-draw button centered above the grid -->
       <button id="tabletCountdown" class="big-cta" type="button">⏱️ 倒數抽獎</button>
 
+      <div class="bar" style="justify-content:center;margin:8px 0">
+        <button id="tabletDraw" class="btn" type="button">🎲 即抽</button>
+      </div>
+
       <div id="currentBatch3" class="batch-grid"></div>
       <div class="winners-list" id="winnersChips3"></div>
 
@@ -288,8 +292,8 @@
             <button id="confirm" class="btn success" type="button" disabled>✅ 上台確認</button>
             <button id="undo" class="btn" type="button" disabled>↩️ Undo</button>
             <button id="clearStage" class="btn" type="button">🧹 清空舞台名單</button>
-            <button id="exportWinners" class="btn" type="button">匯出中獎名單（含桌位/獎品</button>
-            <button id="clearBatch" class="btn warning" type="button">🧹 清空舞台名稱</button>
+            <button id="exportWinners" class="btn" type="button">匯出中獎名單（含桌位/獎品）</button>
+            <button id="clearBatch" class="btn warning" type="button">🧹 清空舞台名單</button>
                   <a id="openTablet" class="btn" href="#tablet">平板控制 ↗</a>
             <a id="openFullStage" class="btn" href="#" target="_blank">在新視窗開啟全屏舞台 ↗</a>
           </div>
