--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Lucky Draw · CMS & Stage</title>
   <link rel="stylesheet" href="./styles.css" />
   <link rel="icon" href="data:,">
+<style>
+  /* roster sort buttons */
+  th .sort{font-size:12px; line-height:1; padding:0 4px; margin-left:4px; opacity:0.7}
+  th .sort.active{opacity:1; text-decoration:underline}
+</style>
 </head>
 <body>
               <!-- LOGIN OVERLAY (local-only) -->
@@ -220,18 +225,6 @@
           </div>
           <div class="bar">
             <input id="search" type="text" placeholder="搜尋姓名/部門" />
-            <label class="stat">排序
-              <select id="rosterSort">
-                <option value="name-asc">姓名 ↑</option>
-                <option value="name-desc">姓名 ↓</option>
-                <option value="dept-asc">部門 ↑</option>
-                <option value="dept-desc">部門 ↓</option>
-                <option value="table-asc">桌號 ↑</option>
-                <option value="table-desc">桌號 ↓</option>
-                <option value="seat-asc">座位 ↑</option>
-                <option value="seat-desc">座位 ↓</option>
-              </select>
-            </label>
             <label class="stat">每頁人數 <input type="number" id="pageSize2" min="5" max="100" value="12" /></label>
 
             <button id="newPage" class="btn" type="button">+ 加新抽獎頁</button>
@@ -247,10 +240,10 @@
         <table class="table" style="margin-top:8px">
         <thead>
           <tr>
-            <th style="min-width:120px">碼</th>
-            <th style="min-width:200px">姓名</th>
-            <th style="min-width:160px">部門</th>
-            <th style="min-width:120px">桌</th>
+            <th style="min-width:120px">碼 <button class="sort" data-key="code" data-dir="asc" title="升序">▲</button><button class="sort" data-key="code" data-dir="desc" title="降序">▼</button></th>
+            <th style="min-width:120px">姓名 <button class="sort" data-key="name" data-dir="asc" title="升序">▲</button><button class="sort" data-key="name" data-dir="desc" title="降序">▼</button></th>
+            <th style="min-width:120px">部門 <button class="sort" data-key="dept" data-dir="asc" title="升序">▲</button><button class="sort" data-key="dept" data-dir="desc" title="降序">▼</button></th>
+            <th style="min-width:120px">桌 <button class="sort" data-key="table" data-dir="asc" title="升序">▲</button><button class="sort" data-key="table" data-dir="desc" title="降序">▼</button></th>
             <th style="min-width:120px">座</th>
             <th style="min-width:120px">狀態</th>
             <th style="min-width:200px">已抽中</th>
