--- a/index.html
+++ b/index.html
@@ -219,9 +219,8 @@
           <div class="row">
             <label class="stat">CSV 名單 <input type="file" id="csv" accept=".csv" /></label>
             <button id="preset" class="btn primary" type="button">載入 CSV</button>
-            <button id="exportCheckin" class="btn" type="button">匯出已報到名單</button>
-            <button id="exportSession" class="btn" type="button">匯出會話</button>
-            <label class="stat">導入會話 <input type="file" id="importSession" accept=".json" /></label>
+            <button id="exportCheckin"  type="button">匯出報到名單</button>
+            <button id="exportWinners"  type="button">匯出中獎名單（含桌位/獎品）</button>
           </div>
           <div class="bar">
             <input id="search" type="text" placeholder="搜尋姓名/部門" />
