--- a/index.html
+++ b/index.html
@@ -86,7 +86,15 @@
 
           <!-- Winner cards (tablet). We’ll inject a BIG countdown button under each name via JS. -->
           <div id="currentBatch3" class="batch-grid" data-mode="tablet"></div>
-
+          <!-- BIG single countdown button under the names grid (tablet) -->
+          <div class="bar" id="tabletCtaRow" style="justify-content:center; margin:12px 0 0">
+            <button id="tabletCountdownBig"
+                    class="btn primary"
+                    type="button"
+                    style="width:min(92%,720px); font-size:clamp(18px,2.2vw,24px); padding:16px 20px;">
+              ⏱️ 倒數抽獎
+            </button>
+          </div>
           <div class="winners-list" id="winnersChips3"></div>
 
           <div class="bar" style="justify-content:center;margin-top:12px">
