--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div class="bar" style="margin-left:auto">
         <a id="landingLink" class="btn primary" href="./landing.html" target="_blank" role="button">手機報名頁 ↗</a>
         <button id="fullscreen" class="btn" type="button">⛶ 全屏</button>
+        <button id="btnLogout" class="btn" type="button">↩︎ 登出</button>
       </div>
     </div>
   </header>
