--- a/index.html
+++ b/index.html
@@ -437,7 +437,14 @@
         </div>
         <p class="pill">建立後將同步到 Firebase Authentication / Database</p>
         <table class="table">
-          <thead><tr><th>Email</th><th>角色</th><th>操作</th></tr></thead>
+          <thead>
+            <tr>
+              <th>Email</th>
+              <th>角色</th>
+              <th>授權活動（逗號分隔）</th>
+              <th>操作</th>
+            </tr>
+          </thead>
           <tbody id="userTable"></tbody>
         </table>
       </section>
