Rename button ID from 'clearBatch' to 'clearStage'

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <button id="undo" class="btn" type="button" disabled>↩️ Undo</button>
             <button id="clearStage" class="btn" type="button">🧹 清空舞台名單</button>
             <button id="exportWinners" class="btn" type="button">匯出得獎 CSV</button>
-            <button id="clearBatch" class="btn warning" type="button">🧹 清空舞台名稱</button>
+            <button id="clearStage" class="btn warning" type="button">🧹 清空舞台名稱</button>
                   <a id="openTablet" class="btn" href="#tablet">平板控制 ↗</a>
             <a id="openFullStage" class="btn" href="#" target="_blank">在新視窗開啟全屏舞台 ↗</a>
           </div>
