--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@
     window.rtdb  = firebase.database();
   </script>
 
+  <script src="./eventData.js"></script>
   <script src="./app.js"></script>
   <script src="./login.js"></script>
 
