--- a/landing.html
+++ b/landing.html
@@ -73,6 +73,7 @@
       <p id="evNotes" class="lp-muted" style="margin-top:8px"></p>
     </section>
   </main>
+  <script src="./eventData.js"></script>
   <script src="./landing.js"></script>
 </body>
 </html>
